Bunch o fixes/changes. Removing shift-click for now due to the extreme bugginess.

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -304,6 +304,12 @@ tfoot th, tfoot td {
 /* Misc
 ----------------------------------------------------------------------------------------------------*/
 
+tbody td::selection,
+.inc::selection,
+.inc label::selection {
+  background-color: transparent;
+}
+
 .clearfix:after {
 	clear: both;
 	content: ' ';
